Important optimizations in code synchronizers