@@ -44,6 +44,7 @@
 				<version>3.13.0</version>
 				<configuration>
 					<release>23</release>
+					<compilerArgs>--enable-preview</compilerArgs>
 				</configuration>
 			</plugin>
 			<!-- Maven Dependency Plugin para copiar dependências -->
